Se agrego la percistencia de datos y mejoras a la aplicación

--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,18 +2,26 @@
 <hr>
 
 <div class="row">
-  <div class="col">
+  <div class="col d-flex justify-content-center">
       <!-- Searcbox -->
-      <shared-search-box
-        (onValue)="searchByRegion($event)"
-        placeholder="Buscar por país"
-      ></shared-search-box>
+      <button
+        *ngFor="let region of regions"
+        (click)="searchByRegion(region)"
+        [ngClass]="{ 'btn-outline-primary': selectedRegion === region }"
+        class="btn mx-2"
+      >
+        {{ region }}
+      </button>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
       <hr>
+      <shared-loading-spinner
+        *ngIf="isLoading"
+      ></shared-loading-spinner>
+
       <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
