--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -5,7 +5,8 @@
   <div class="col">
       <!-- Searcbox -->
       <shared-search-box
-        (onValue)="searchByCountry($event)"
+        [initialValue]="initialValue"
+        (onDebounce)="searchByCountry($event)"
         placeholder="Buscar por país"
       ></shared-search-box>
   </div>
@@ -14,6 +15,10 @@
 <div class="row">
   <div class="col">
       <hr>
+      <shared-loading-spinner
+        *ngIf="isLoading"
+      ></shared-loading-spinner>
+
       <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
